[LibWebRTC][GStreamer] Incoming H.264 stream parsing fails https://bugs.webkit.org/show_bug.cgi?id=269838

Reviewed by Xabier Rodriguez-Calvar.

Workaround cases where the GStreamer LibWebRTC decoder is expected to process frames with invalid
render time.

* Source/WebCore/platform/mediastream/libwebrtc/gstreamer/GStreamerVideoDecoderFactory.cpp:
(WebCore::GStreamerVideoDecoder::GstDecoderFactory):

Canonical link: https://commits.webkit.org/275166@main